--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "new-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
