--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
     "start": "node server.js"
-    
   },
   "author": "",
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.3",
     "mongoose-paginate": "^5.0.3",
